fix: stop line wrap immediately after inline math
Closes #1233

--- a/src/katex.less
+++ b/src/katex.less
@@ -17,6 +17,9 @@
     // Prevent a rendering bug that misplaces \vec in Chrome.
     text-rendering: auto;
 
+    /* Do not wrap math elements, unless in an inline spacer. */
+    white-space: nowrap;
+
     * {
         // Prevent background resetting on elements in Windows's high-contrast
         // mode, while still allowing background/foreground setting on root .katex
@@ -46,6 +49,11 @@
         /* \newline is an empty block at top level, between .base elements */
         > .newline {
             display: block;
+        }
+
+        /* Element containing &ZeroWidthSpace; between .base elements */
+        > .spacer {
+            white-space: normal;
         }
     }
 
@@ -645,7 +653,6 @@
     > .katex {
         display: block;
         text-align: center;
-        white-space: nowrap;
 
         > .katex-html {
             display: block;
